<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventU</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Buscar</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="drawer_open">Menú Abierto</string>
    <string name="drawer_close">Menú Cerrado</string>
    <string name="descImagen">Imagen</string>
    <string name="Radio">Radio</string>
    <string name="hint_fecha">dd/mm/aaaa</string>
    <string name="FiltroNombre">Nombre:</string>
    <string name="hint_filtro">Nombre</string>
    <string name="hintUbicacion">Nombre del lugar del evento</string>
    <string name="hintCuidad">Ciudad</string>
    <string name="FiltroCategoria">Categoria:</string>
    <string name="FiltroFecha">Fecha:</string>
    <string name="hint_fecha">dd/mm/aaaa</string>
    <string name="OpnVisualizacion">Opciones de visualización</string>
    <string name="txtBuscar">Buscar</string>
    <string name="EventosFallido">Error al mostrar evento</string>
    <string name="Categorias">Categorias</string>

    <!-- Ver evento -->
    <string name="detalleEventoTitulo">Detalle evento</string>
    <string name="cargandoInfo">Cargando información&#8230;</string>
    <string name="detalleEventoSi">Si</string>
    <string name="detalleEventoNo">No</string>
    <string name="detalleEventoAsistencia"> personas asistiran, ¿iras?</string>
    <string name="detalleEventoDir">Dirección: </string>
    <string name="txtComentarios">Ver Comentarios</string>
    <string name="opina">Opina</string>
    <string name="comentarios">Comentarios</string>
    <string name="comoLlegar">Como llegar</string>
    <string name="verMasComentarios">Ver mas comentarios</string>

    <!-- Crear evento -->
    <string name="btn_inicio">Volver</string>
    <string name="crearEventoTitulo">Nuevo evento</string>
    <string name="crearEventoHintDescrip">Detalles del evento</string>
    <string name="crearEventoDatosEvento">Datos del evento</string>
    <string name="crearEventoNombre">Nombre del evento</string>
    <string name="crearEventoDescrip">Descripción</string>
    <string name="crearEventoLocalEvento">Localización del evento</string>
    <string name="crearEventoUbicacionActual">Elige la ubicación del evento</string>
    <string name="crearEventoElegirUbicacion">Elegir ubicación</string>
    <string name="crearEventoCategoria">Categoria del evento</string>
    <string name="crearEventoFechaDelEvento">Fecha del evento</string>
    <string name="crearEventoTodoElDia">Todo el día</string>
    <string name="crearEventoHoraInicio">Hora inicio:</string>
    <string name="crearEventoFechaInicio">Fecha inicio:</string>
    <string name="crearEventoHoraFin">Hora fin</string>
    <string name="crearEventoFechaFin">Fecha fin:</string>
    <string name="crearEventoBoton">Crear evento</string>
    <string name="crearEventoComentarios">Comentarios del evento</string>
    <string name="crearEventoPerComentarios">Permitir comentarios</string>
    <string name="crearEventoImagenes">Imágenes del evento</string>
    <string name="crearEventoCargarImagen">Cargar imagen</string>
    <string name="hint_hora">hh:mm</string>
    <string name="elegirLocalizacion">Pulse el sitio para seleccionarlo </string>

    <!-- Opiniones -->
    <string name="dialogTitle">Comenta y puntua el evento</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="dialog_positive_text">Enviar</string>
    <string name="dialog_negative_text">Cancelar</string>
    <string name="OpinionHintOpinion">Escribe tu comentario</string>
    <string name="dialogPuntua">Puntuacion:</string>
    <string name="dialogComentario">Comentario:</string>
    <string name="VerOpinionValoracion">Valoracion:</string>
    <string name="noHayComentarios">Aun no hay comentarios. ¡Sé el primero!</string>
    <string name="dialogEnviar">Enviar</string>
    <string name="dialogCancelar">Cancelar</string>
    <string name="dialogComentadoOK">Comentario enviado</string>
    <string name="dialogComentadoNULL">Error al enviar el comentario. Intentelo mas tarde</string>
    <string name="dialogNoComentado">El campo comentario no puede estar vacio</string>

    <!-- Errores -->
    <string name="errNoConexion">No dispone de conexión, comprueba la configuracion de la red</string>
    <string name="errNoUbicacion">Su ubicación no se encuentra disponible.</string>
    <string name="errNoDatosConsulta">La consulta no devolvió ningún evento.</string>
    <string name="errNoServidor">No se han podido recuperar eventos,pruebe pasados unos minutos.</string>
    <string name="mensajeGPS">Para mejorar tu experiencia en Eventu debe activar la ubicación de redes móviles y GPS ¿Desea activarlo?</string>
    <string name="mensajeNoRecordar">No recordar</string>
    <string name="mensajeCancelar">Cancelar</string>
    <string name="mensajeSi">Sí</string>
    <string name="NoEncuetroLocalizacion">No encuentras el lugar del evento ¡pincha aqui!</string>

    <!-- Tutorial -->
    <string name="tutorial">Tutorial</string>
    <string name="txtTutDeslizar">Desliza el dedo para desplegar el menú</string>

    <!-- Acerca de -->
    <string name="acercaDeVersion">Versión %s</string>
    <string name="copyright">©2013 Desipal</string>
    <string name="acercaDeDerechos">Todos los derechos reservados</string>

    <!-- Sugerencias -->
    <string name="enviar">Enviar</string>
    <string name="hintSMS">Escriba aquí su mensaje</string>
    <string name="hintEmail">Correo electrónico (opcional)</string>
    <string name="txtSugerenia">Para cualquier duda, sugerencia, consulta o comentario puede enviarnos un email rellenado el siguiente formulaio</string>
</resources>