<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343838"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/txtSugerenia"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/campo"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtMsmEnviar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/campo"
        android:hint="@string/hintSMS"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnEnviarSug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@anim/anim_boton"
        android:textColor="#fff"
        android:text="@string/enviar" />

</LinearLayout>