<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/relCabecera"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/cabecera" >

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/crearEventoTitulo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@anim/anim_boton_pequeno"
            android:drawableLeft="@drawable/ic_menu_home"
            android:text="@string/btn_inicio"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/relCabecera" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ddd" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <!-- DATOS DEL EVENTO -->

                <TextView
                    android:id="@+id/txtDatosEvento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crearEventoDatosEvento"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crearEventoNombre" />

                <EditText
                    android:id="@+id/editNombre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/campo"
                    android:hint="@string/crearEventoNombre"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="30" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/txtDescrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crearEventoDescrip" />

                <EditText
                    android:id="@+id/editDescrip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/campo"
                    android:hint="@string/crearEventoHintDescrip"
                    android:inputType="textMultiLine" />

                <TextView
                    android:id="@+id/txtCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/crearEventoCategoria" />

                <Spinner
                    android:id="@+id/spiCategorias"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@anim/anim_boton"
                    android:minWidth="100dp"
                    android:prompt="@string/Categorias" />

                <!-- LOCALIZACION -->

                <TextView
                    android:id="@+id/txtLocalizacionEvento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/crearEventoLocalEvento"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtUbicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/btnUbicacion"
                        android:layout_marginRight="5dp"
                        android:text="@string/crearEventoUbicacionActual" />

                    <Button
                        android:id="@+id/btnUbicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@+id/txtUbicacion"
                        android:background="@anim/anim_boton"
                        android:text="@string/crearEventoElegirUbicacion"
                        android:textColor="#fff"
                        android:textSize="15sp" />

                    <fragment
                        android:id="@+id/mapaLocalizacion"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:layout_below="@+id/btnUbicacion"
                        android:layout_marginTop="5dp" />
                </RelativeLayout>

                <!-- FECHA DEL EVENTO -->

                <RelativeLayout
                    android:id="@+id/relFechas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtFechaEvento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/crearEventoFechaDelEvento"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/chTodoElDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtFechaEvento"
                        android:text="@string/crearEventoTodoElDia"
                        android:textStyle="normal" />

                    <TableLayout
                        android:id="@+id/tableFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/chTodoElDia"
                        android:stretchColumns="*" >

                        <TableRow
                            android:id="@+id/table2Row1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/txtFechaInicio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/crearEventoFechaInicio" />

                            <TextView
                                android:id="@+id/txtHoraInicio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/crearEventoHoraInicio" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/table2Row2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <EditText
                                android:id="@+id/editFechaInicio"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/campo"
                                android:focusable="false"
                                android:hint="@string/hint_fecha"
                                android:maxLength="10" />

                            <EditText
                                android:id="@+id/editHoraInicio"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/campo"
                                android:focusable="false"
                                android:hint="@string/hint_hora"
                                android:maxLength="5" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/table2Row3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/txtFechaFin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/crearEventoFechaFin" />

                            <TextView
                                android:id="@+id/txtHoraFin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/crearEventoHoraFin" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/table2Row4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <EditText
                                android:id="@+id/editFechaFin"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/campo"
                                android:focusable="false"
                                android:hint="@string/hint_fecha"
                                android:maxLength="10" />

                            <EditText
                                android:id="@+id/editHoraFin"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/campo"
                                android:focusable="false"
                                android:hint="@string/hint_hora"
                                android:maxLength="5" />
                        </TableRow>
                    </TableLayout>

                    <LinearLayout
                        android:id="@+id/relImagenes"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tableFecha"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txtSubirImagenes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/crearEventoImagenes"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btnSubirImagen"
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@anim/anim_boton"
                            android:drawableLeft="@drawable/ic_menu_camera"
                            android:text="@string/crearEventoCargarImagen"
                            android:textColor="#fff"
                            android:textSize="15sp" />

                        <com.desipal.eventu.Extras.ExpandableHeightGridView
                            android:id="@+id/listImagenes"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/txtComentariosEvento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/crearEventoComentarios"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:id="@+id/relComentarios"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/txtComentarios"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/togComentarios"
                                android:layout_marginRight="5dp"
                                android:text="@string/crearEventoPerComentarios" />

                            <ToggleButton
                                android:id="@+id/togComentarios"
                                android:layout_width="80dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_toRightOf="@+id/txtComentarios"
                                android:background="@drawable/toggle_bg"
                                android:checked="false"
                                android:textOff=""
                                android:textOn="" />
                        </RelativeLayout>

                        <Button
                            android:id="@+id/btnCrearEvento"
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:background="@anim/anim_boton"
                            android:drawableLeft="@drawable/ic_menu_add"
                            android:text="@string/crearEventoBoton"
                            android:textColor="#fff" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/relBloquear"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#AA000000"
            android:clickable="true"
            android:visibility="gone" >

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>